--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
+*{
+  font-family: 'Raleway', sans-serif;
+}
 :root{
   --primary:#9b91f2 !important;
   --secondary:#aff2f9 !important;
-  --app-container: #f3f6fd;
+  --app-container: #fbfcff;
   --main-color: #1f1c2e;
 }
 .content-middle , .central{
@@ -31,21 +34,11 @@ backdrop-filter: blur(17.4px);
   position:fixed;
   top:90px;
   left:10px;
-  /* border-top-left-radius: 200px;
-  border-top-right-radius: 200px; */
   width:250px;
   height:calc(100% - 120px);
-  border-left:10px solid var(--primary);
+  padding: 3rem 2rem;
 }
-.sidebarContent{
-  display: flex;
-  height: calc(100%);
-  width: calc(100%);
-  justify-content: center;
-  align-items: center;
-}
-.sidebarContent a , .circle{transition: 0.3s ease-in;}
-.sidebarContent a:hover{color:var(--primary)}
+
 
 .graph{
   margin:30px auto;
@@ -57,9 +50,8 @@ backdrop-filter: blur(17.4px);
   align-items: center;
 }
 .main{position:absolute;top: 60px;left: 250px;width:calc(100% - 250px);padding-top: 30px;}
-.primary{background-color: var(--primary);}
+
 .text-primary{color:var(--primary)}
-.secondary{background-color: var(--secondary);}
 .text-secondary{color:var(--secondary)}
 .designBg{
 
@@ -69,10 +61,10 @@ backdrop-filter: blur(17.4px);
   display:flex;
   align-items:center;
   justify-content: center;
-  background-color:var(--app-container);
+  /* background-color:var(--app-container); */
 }
 .form{border-left:10px solid var(--secondary);}
-.form input , button{border-radius: 200px !important;padding:15px !important;}
+/* .form input , button{border-radius: 200px !important;padding:15px !important;} */
 @media(max-width:993px){
   .sideBar{
     left: 0;
